readability fix
changed hover effect on checkboxes for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,7 @@ label span{
   padding: 11px;
 }
 .showCheckbox:hover{
-  background-color: lightgray;
+  background-color: #1d2124e8;
   cursor: pointer;
 }
 
